--- a/SIRShiny.rmd
+++ b/SIRShiny.rmd
@@ -1,4 +1,3 @@
-
 library(shiny)
 library(dplyr)
 library(ggplot2)
@@ -7,23 +6,26 @@ library(ggplot2)
 ui <- fluidPage(
   
   # Application title
-  titlePanel("SIR Modeling "),
+  titlePanel("SIR Modeling - Britney, Linh, and Bowen"),
   
   # Sidebar with a slider input for number of bins 
   sidebarLayout(
     sidebarPanel(
+      checkboxGroupInput("Random",
+                         "Variability?",
+                         "Yes"),
       sliderInput("Pop",
                   "Population of our town",
                   min = 50,
                   max = 2000,
                   value = 500),
-      numericInput("Days",
+      sliderInput("Days",
                    "Number of Days you want to see (Select -1 to see when the disease will go away)",
                    min = -1,
                    max = 200,
                    step = 1, 
                    value = 50),
-      numericInput("Initialinf",
+      sliderInput("Initialinf",
                    "Initial People infected",
                   min = 1,
                   max = 100,
@@ -43,9 +45,9 @@ ui <- fluidPage(
                   value = 0.01),
       sliderInput("Susceptible_Rate",
                   "Susceptible Rate",
-                  min = 0.1,
+                  min = 0.01,
                   max = 1,
-                  step = 0.1,
+                  step = 0.01,
                   value = 0.2)
       
     ),
@@ -106,16 +108,52 @@ server <- function(input, output) {
       theme_minimal()
   }
   
+  basic.model.rand = function(n = 500, beta = 0.01, gamma = 0.7, S.rate = 0.2, I = 5, t = 50){
+    curr.day = 0
+    healthy = n - I
+    susceptible = round(S.rate * healthy)
+    infected = I
+    infected.next = round(I * beta * susceptible)
+    treat = round(gamma * I)
+    recovered = 0
+    
+    df = data_frame(Day = curr.day, Healthy = healthy, Susceptible = susceptible, Infected = infected, Recovered = recovered)
+    # df = data_frame(Day = curr.day, Healthy = healthy, Susceptible = susceptible, Infected = infected, I.next = infected.next, Tr = treat, R = recovered)
+    
+    for(i in 1:t){
+      if(infected == 0)
+        break()
+      curr.day = curr.day + 1
+      healthy = healthy - infected.next
+      susceptible = round(S.rate * healthy)
+      infected = infected + infected.next - treat
+      infected.next = rbinom(1, infected*susceptible, beta) # I introduced an rbinom command here which give a random outcome based on the binomial distribtuion of infected*susceptible size and a success rate of beta.
+      treat = rbinom(1, infected, gamma) # Here is the other rbinom command here which give a random outcome based on the binomial distribtuion with infected size and a success rate of beta.
+      recovered = recovered + treat
+      data = c(curr.day, healthy, susceptible, infected, recovered)
+      # data = c(curr.day, healthy, susceptible, infected, infected.next, treat, recovered)
+      df = rbind(df, data)
+    }
+    return(df)
+  }
 
   output$distPlot <- renderPlot({
     validate(
       need(input$Initialinf < input$Pop, "Initial Infected Cannot be more than the population")
     )
+
+    if("Yes" %in% input$Random){
+    df = basic.model.rand(n = input$Pop, beta = input$Spread_Rate, gamma = input$Treat_Rate, S.rate = input$Susceptible_Rate, I = input$Initialinf, t = input$Days)
+    model.plot(df)   
+    }
+    else{
     df = basic.model(n = input$Pop, beta = input$Spread_Rate, gamma = input$Treat_Rate, S.rate = input$Susceptible_Rate, I = input$Initialinf, day = input$Days)
     model.plot(df)
-  })
+ }
+ })
 }
 
 
 # Run the application 
 shinyApp(ui = ui, server = server)
+
