--- a/Complex SIR model WITH variability.Rmd
+++ b/Complex SIR model WITH variability.Rmd
@@ -1,9 +1,7 @@
 ---
 title: "Complex SIR model with Variability"
 author: "Linh, Britney, Bowen"
-output: 
-  html_notebook:
-    code_folding: hide
+output: html_notebook
 ---
 
 ```{r setup, include=FALSE}
