init complex app

--- a/Complex SIR model WITH variability.Rmd
+++ b/Complex SIR model WITH variability.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Complex SIR model with Variability"
 author: "Linh, Britney, Bowen"
-output: html_notebook
+output: html_notebooks
 ---
 
 ```{r setup, include=FALSE}
