--- a/SIHRDmodel with variability.Rmd
+++ b/SIHRDmodel with variability.Rmd
@@ -53,7 +53,7 @@ model.data = function(N, beta, I.0, p, epsilon, theta, gamma, TimeH, TimeNH){
                   Total.Dead = Total.Dead)
   
   # Watch the disease until it ends (daily new case = 0) or at max 200 days
-  while(NewInfected * S > 0 & curr.day < 200){
+  while(Total.Infective * S > 0 & curr.day < 200){
     curr.day = curr.day + 1
     
     # Number of individuals recovered from the infected in hospital (previous day)
@@ -166,11 +166,11 @@ test.model = SIRHD.model(10000, 2, 5, 0.5, 0.8, 0.9, 0.9, 10, 5)
     \begin{itemize}
         \item Population $N$ (3 levels): small town (10,000), big town (100,000), and mega city (1,000,000)
         \item Transmission Rate $\beta$ (2 levels): 2/population and 4/population
-        \item Hospitalization Rate $\varepsilon$ (3 levels): 50\%, 60\%, and 70\%
+        \item Hospitalization Rate $\varepsilon$ (3 levels): 5\%, 10\%, and 15\%
         \item Recovery Rate with Hospitalization $\theta$ (2 levels): 90\% and 95\%
         \item Recovery Rate without Hospitalization $\gamma$ (2 levels): 90\% and 95\%
         \item Average days in hospital $\inv{\psi}$ (2 levels): 10 and 15
-        \item Average days in infected status $\inv{\lambda}$ (2 levels): 5 and 10
+        \item Average days in infected status $\inv{\lambda}$ (2 levels): 1 and 5
     \end{itemize}
 \end{itemize}
 
