--- a/SIRHD.Rmd
+++ b/SIRHD.Rmd
@@ -1,15 +1,84 @@
 ---
-title: "SIHRD Model"
+title: "Infectious Disease Modeling"
 author: "Linh Tang, Britney He, Bowen Mince"
 date: "12/11/2020"
-output: html_document
+output: 
+  html_notebook:
+    code_folding: hide
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
 library(dplyr)
 library(ggplot2)
 ```
+
+## 1. Model Introduction
+
+The following model is developed from SIR-type compartmental models for COVID-19, including hospitalization as an intervention strategy. Contrary to basic SIR model in which the whole population is considered susceptible, the proposed deterministic model takes into account the fact that only certain percentage of the population being susceptible to get the disease. 
+
+### Compartments
+
+This model is proposed to trace epidemic evolution in an isolated population of $N$ individuals. At each moment of time (day), the population could be divided into five states (compartments):
+
+* **Susceptible $(S)$**: currently at risk of getting the disease
+* **Newly Infected $(I)$**: currently infected and infectious (being able to transmit the disease)
+* **Hospitalized $(H)$**: currently infected and in critical conditions but no longer infectious.  (beingisolated in hospital)
+* **Non-Hospitalized $(NH)$**: Still infected but not in the hospital so is still infectious
+* **Recovered $(R)$**: was infected but successfully recovered (no matter if hospitalized or not), and isnow immune from the disease (transferred to the Non-Susceptible group).
+* **Dead $(D)$**: difference between Infected and Recovered (I−R) i.e.  was infected but failed to recover.
+
+Note that there is one additional end state that recovered people will be counted in:
+
+* **Non-Susceptible $(NS)$**: either successfully recovered or initially at no risk of getting infected.
+
+### Assumptions
+
+The model is built upon several assumptions:
+
+* Hospitalized individuals can no longer spread the disease. This follows that individuals once hos-pitalized are isolated from the community. For Non-hospitalized individuals, we will assume thatthey still spread the disease, but at a lower rate than that of newely infected individuals.
+* Immunity from the disease is achieved and becomes permanent upon recovery, which makesRanabsorbing state. This means once recovered, an individual can no longer be susceptible (and thusmoved intoNSstate). This assumption can be made as we have only literature finds the rate ofre-infection to be negligible.
+* The next day from being infected, a percentage of individuals will be placed into the hospital.
+* Once becoming hospitalized or not hospitalized,  individuals will leave the compartment at someaverage rate. Afterwards, they will have either recovered or died.
+
+### Parameters
+
+At the beginning of the disease, we will have an initial number of people susceptible to the diseaseand a initial number of people infected with the disease.  Therefore, the compartments at $t= 0$ are:
+* $S_0, I_0 > 0$
+* $NS_0 \geq 0$
+* $H_0 = R_0 = D_0 = {NH}_0 = 0$
+
+The compartmentalization of the population are governed by a set of parameters:
+
+* **Transmission rate $\beta$**: the infection rate (The probability of an infection from a single contact multiplied by the average amount of contacts per person).
+* **Hospitalization percentage $\varepsilon$**: the  percentage ofinfected individuals that will endup  being hospitalized.
+* **Hospitalized removal rate $\psi$**: The rate at which people will leave the hospital.  The inverse ofthis parameter represents the average time spent in the hospital.
+* **Non-hospitalized removal rate $\lambda$**: The rate at which people will leave the hospital.The inverse of  this parameter represents the average amount  of  time  an  infected  individual  remains  infectedand infective before moving to the next stage (recover or die).
+* **Recovery percentage without hospitalization $\gamma$**: The percentage of non-hospitalized infectedpeople who recovered from the disease. **$1-\gamma$** is the percentage of people who will die after not being hospitalized.
+* **Recovery percentage with hospitalization $\theta$**: the percentage chance that an individual has ofbecoming fully recovered after being hospitalized. **$1-\theta$** is the percentage of people who will die after being hospitalized.
+
+<center>
+
+![Schematic flow chart between compartments](ComplexApp/scheme.png){width=70%}
+
+</center>
+
+### Mathematical Equations
+
+Taking into consideration our 5 compartments, the model is described by a set of equations:
+
+\begin{align*}
+    \Delta{S_t} & =  - \frac{\beta S_{t-1}}{N} (I_{t-1} + \textit{NH}_{t-1}) \\
+    \Delta{I_t} & = \frac{\beta S_{t-1}}{N}I_{t-1} - I_{t-1}  \\ 
+    \Delta{H_{t}} & = \varepsilon*I_{t-1} - \psi H_{t-1} \\
+    \Delta{NH_{t}} & = (1-\varepsilon)I_{t-1} - \lambda \textit{NH}_{t-1} \\
+    \Delta{R_{t}} & = \lambda \gamma \textit{NH}_{t-1} + \psi \theta H_{t-1} \\
+    \Delta{D_{t}} & = \lambda (1 - \gamma) \textit{NH}_{t-1} + \psi (1 - \theta) H_{t-1}
+\end{align*}
+
+Notice that $\Delta{S_t} + \Delta I_{t} + \Delta {H_{t}} + \Delta {NH_{t}} + \Delta {R_{t}} + \Delta {D_{t}} = 0$ which means no person will leave or be added to the system.
+
+Moreover, $S_t + I_t + H_t + H_t + NH_t + NS_t + D_t = P$ (Note: $NS$ includes people who have recovered and who were initially non-susceptible.)
 
 ```{r}
 model.data = function(N, beta, I.0, p, epsilon, theta, gamma, TimeH, TimeNH){
@@ -20,7 +89,7 @@ model.data = function(N, beta, I.0, p, epsilon, theta, gamma, TimeH, TimeNH){
   S = p * N - I.0
   NS.0 = N - S - I.0
   NS = NS.0
-  NewInfected = I0
+  NewInfected = I.0
   Total.Hospital = 0
   Total.NonHospital = 0
   Total.Infected = NewInfected + Total.Hospital + Total.NonHospital
@@ -100,7 +169,7 @@ model.plot = function(data){
         geom_line(aes(y = Total.Recovered, color = "Total Recoverd")) +
         geom_line(aes(y = Total.Dead, color = "Total Dead")) +
         scale_color_discrete(name = "Compartment") +
-        labs(y = "Population", title = "SIHRD Model") + 
+        labs(y = "Population", title = "SIRHD Model") + 
         theme_minimal()
   return(p)
 }
@@ -124,13 +193,7 @@ model.confirm = function(data){
   return(data)
 }
 
-### UNIT TESTING BY RUNNING EACH OF THESE FUNCTIONS BELOW
-# data = model.data(10000, 2, 5, 0.5, 0.8, 0.9, 0.9, 0.1, 0.2)
-# model.confirm(data)
-# model.plot(data)
-# model.info(data)
-
-SIHRD.model = function(N, beta, I.0, p, epsilon, theta, gamma, TimeH, TimeNH){
+SIRHD.model = function(N, beta, I.0, p, epsilon, theta, gamma, TimeH, TimeNH){
   param = c(N, beta/N, epsilon, theta, gamma, TimeH, TimeNH)
   data = model.data(N, beta, I.0, p, epsilon, theta, gamma, TimeH, TimeNH)
   plot = model.plot(data)
@@ -138,45 +201,81 @@ SIHRD.model = function(N, beta, I.0, p, epsilon, theta, gamma, TimeH, TimeNH){
   info = c(param, result_info)
   return(list(data,plot,info))
 }
-
-test.model = SIHRD.model(10000, 2, 5, 0.5, 0.8, 0.9, 0.9, 10, 5)
+# test.model = SIRHD.model(10000, 2, 5, 0.5, 0.8, 0.9, 0.9, 10, 5)
 ```
 
-###Factorial Design of 5 factors with 288 levels
+### Example
 
-\begin{itemize}
-    \item Response Variables
-    \begin{itemize}
-        \item Total Death
-        \item Total Infected
-        \item Number of Days (disease lasts)
-        \item Peak Prevalence (Max Infected Proportion)
-        \item Max Hospitalized Proportion
-    \end{itemize}
-    \item Explanatory Variables
-    \begin{itemize}
-        \item Population $N$ (3 levels): small town (10,000), big town (100,000), and mega city (1,000,000)
-        \item Transmission Rate $\beta$ (2 levels): 2/population and 4/population
-        \item Hospitalization Rate $\varepsilon$ (3 levels): 50\%, 60\%, and 70\%
-        \item Recovery Rate with Hospitalization $\theta$ (2 levels): 90\% and 95\%
-        \item Recovery Rate without Hospitalization $\gamma$ (2 levels): 90\% and 95\%
-        \item Average days in hospital $\inv{\psi}$ (2 levels): 10 and 15
-        \item Average days in infected status $\inv{\lambda}$ (2 levels): 5 and 10
-    \end{itemize}
-\end{itemize}
+Below is an example of a model on 10000 population with a tranmission rate = 2/10000, 5 initial infected inidividual, 50% susceptible rate, 20% hospitalization rate, recovery rate for both hospitalized and non-hospitalized individuals are 90%, time spend in hospital is 10 days, and infectious time (non-hospitalized) is 5 days.
 
 ```{r}
-I0 = 5
+test.model = SIRHD.model(10000, 2, 5, 0.5, 0.2, 0.9, 0.9, 10, 5)
+test.model[[1]]
+test.model[[2]]
+model.summary = cbind(c("Population", "TransmissionRate", "HospitalizationRate", "HospitalizedRecoveryRate", "NonHospitalizedRecoveryRate", "HospitalizationTime", "InfectionTime"), test.model[[3]][1:7], c("LastDay", "Status", "TotalDeath", "TotalInfected", "MaxNewCase", "PeakDayNewCase", "MaxInHospital", "PeakDayHospital"), test.model[[3]][8:15])
+model.summary = as.data.frame(model.summary)
+colnames(model.summary) = c("Parameter", "Value", "Result", "Value")
+model.summary
+```
+
+### Iowa State Experiments
+
+Applying this model to the state of Iowa, which has a population of roughly 3 million ($N = 3,000,000$), with a susceptible group of 1,499,995 ($p = 0.5$) with 5 being initially infected  (i.e the beginning of the disease). We use the per capita transmission rate of 3 over the total population ($\beta = 0.000001$), hospitalization percentage of 70\% ($\varepsilon = 0.7$), a recovery rate of 90\% ($\gamma = 0.9$) for infected individual not being hospitalized, and 80\% ($\theta = 0.8$) for people in hospitalization. We assume that everyday around 10\% of the infected group in the hospital the previous day will either recover or die ($\psi = 0.1$). For people not hospitalized, we'll have 20\% ($\lambda = 0.2$) either recover or die. 
+
+Before getting detected and hospitalized, the 5 initial infected had spread the disease to $5 \times 0.000001 \times 1,499,995 = 7$ other people. On the first day, there are $1,499,995 - 7 = 1,499,988$ people left in the susceptible group, $5 \times 0.8 = 4$ infected people in the hospital and $7 + 5 - 4 = 8$ infected and infective people in the community. The total number of infected individuals is $8 + 4 = 12$, but only 8 people will be the source of transmission for the second day.
+
+At the end of the first day, for the new 7 cases, $7 \times 0.8 = 5$ will be admitted to the hospital, increasing the total number of hospitalized individuals to $4 + 5 = 9$, and $12 - 9 = 3$ remained infected in the community. On the second day, $8 \times 0.000001 \times 1,499,988 = 12$ people are newly infected with the disease, leaving $1,499,988 - 12 = 1,499,976$ in the susceptible group. The total number of infected at this point is $12 + 12 = 24$, but only $12 + 3 = 15$ people will be the source of transmission for the second day. This model examines the disease for 81 days before it reaches equilibrium state, newly infected = 0.
+
+![Evolution of Infectious Disease in Iowa State](ComplexApp/IowaStateModel.png)
+
+
+## 2. Factorial Experiment Design 
+
+### Response Variables
++ Total Death Proportion
++ Total Infected Proportion
++ Number of Days (disease lasts)
++ Peak Prevalence (Max Infected Proportion)
++ Max Hospitalized Proportion
+  
+  
+### Explanatory Variables of 7 factors with 288 levels
++ Population $N$
+  * small town - 10,000
+  * big town - 100,000
+  * mega city - 1,000,000
++ Transmission Rate $\beta$
+  * $2/N$
+  * $4/N$
++ Hospitalization Rate $\varepsilon$
+  * 5\%
+  * 10\%
+  * 15\%
++ Recovery Rate with Hospitalization $\theta$
+  * 90%
+  * 95%
++ Recovery Rate without Hospitalization $\gamma$
+  * 90%
+  * 95%
++ Average time in hospital ${\psi}^{-1}$
+  * 5 days
+  * 10 days
++ Average time in infected status ${\lambda}^{-1}$
+  * 1 day
+  * 5 days
+
+```{r}
+I.0 = 5
 S.rate = 0.5
 
 # List of Explanatory Variables:
 Pop.Lst = c(10000, 100000, 1000000)
 Beta.Lst = c(2,4)
-Hrate.Lst = c(0.5, 0.6, 0.7)
+Hrate.Lst = c(0.05, 0.1, 0.15)
 RrateH.Lst = c(0.9, 0.95)
 RrateNH.Lst = c(0.9, 0.95)
 TimeH.Lst = c(10, 15)
-TimeNH.Lst = c(5, 10)
+TimeNH.Lst = c(1, 5)
 
 #Pop.Lst, Beta.Lst, Hrate.Lst, RrateH.Lst, RrateNH.Lst, TimeH.Lst, TimeNH.Lst
 result_table = data.frame()
@@ -187,7 +286,7 @@ for(N in Pop.Lst){
         for(rrnh in RrateNH.Lst){
           for(th in TimeH.Lst){
             for(tnh in TimeNH.Lst){
-              model = SIHRD.model(N, b, I0, S.rate, hr, rrh, rrnh, th, tnh)
+              model = SIRHD.model(N, b, I.0, S.rate, hr, rrh, rrnh, th, tnh)
               result_table = rbind(result_table, model[[3]], stringsAsFactors = FALSE)
             }
           }
@@ -196,9 +295,58 @@ for(N in Pop.Lst){
     }
   }
 }
-colnames(result_table) = c("Population", "TransmissionRate", "HospitalizationRate", "HospitalizedRecoveryRate", "Non-HospitalizedRecoveryRate", "HospitalizationTime", "InfectionTime", "LastDay", "Status", "TotalDeath", "Total Infected", "Max New Case", "PeakDayNewCase", "MaxInHospital", "PeakDayHospital")
+colnames(result_table) = c("Population", "TransmissionRate", "HospitalizationRate", "HospitalizedRecoveryRate", "NonHospitalizedRecoveryRate", "HospitalizationTime", "InfectionTime", "LastDay", "Status", "TotalDeath", "TotalInfected", "MaxNewCase", "PeakDayNewCase", "MaxInHospital", "PeakDayHospital")
 result_table[1:7] = as.data.frame(sapply(result_table[1:7], as.numeric))
 result_table[1:7] = format(result_table[1:7], scientific = FALSE)
 result_table[c(1:7,9)] = as.data.frame(sapply(result_table[c(1:7,9)], as.factor))
 result_table[c(8,10:15)] = as.data.frame(sapply(result_table[c(8,10:15)], as.numeric))
+
+numericPop = as.numeric(as.character(result_table$Population))
+
+result_table$DeathProportion = result_table$TotalDeath / numericPop
+result_table$InfectedProportion = result_table$TotalInfected / numericPop
+result_table$MaxCaseProportion = result_table$MaxNewCase / numericPop
+result_table$MaxHospitalProportion = result_table$MaxInHospital / numericPop
+```
+
+#### Response Variable: Total Death Proportion
+
+```{r}
+Death.Anova = aov(DeathProportion ~ Population + TransmissionRate + HospitalizationRate + HospitalizedRecoveryRate + NonHospitalizedRecoveryRate + HospitalizationTime + InfectionTime, data = result_table) 
+summary(Death.Anova)
+```
+
+#### Response Variable: Total Infected Proportion
+
+```{r}
+Infected.Anova = aov(InfectedProportion ~ Population + TransmissionRate + HospitalizationRate + HospitalizedRecoveryRate + NonHospitalizedRecoveryRate + HospitalizationTime + InfectionTime, data = result_table)
+summary(Infected.Anova)
+```
+
+#### Response Variable: Maximum New Case Proportion
+
+```{r}
+NewCase.Anova = aov(MaxCaseProportion ~ Population + TransmissionRate + HospitalizationRate + HospitalizedRecoveryRate + NonHospitalizedRecoveryRate + HospitalizationTime + InfectionTime, data = result_table)
+summary(NewCase.Anova)
+```
+
+#### Response Variable: Peak Day of Infected
+
+```{r}
+PeakDay.Anova = aov(PeakDayNewCase ~ Population + TransmissionRate + HospitalizationRate + HospitalizedRecoveryRate + NonHospitalizedRecoveryRate + HospitalizationTime + InfectionTime, data = result_table)
+summary(PeakDay.Anova)
+```
+
+#### Response Variable: Total Hospitalized Proportion
+
+```{r}
+Hospital.Anova = aov(MaxHospitalProportion ~ Population + TransmissionRate + HospitalizationRate + HospitalizedRecoveryRate + NonHospitalizedRecoveryRate + HospitalizationTime + InfectionTime, data = result_table)
+summary(Hospital.Anova)
+```
+
+#### Response Variable: Peak Day of Hospitalization
+
+```{r}
+PeakDayH.Anova = aov(PeakDayHospital ~ Population + TransmissionRate + HospitalizationRate + HospitalizedRecoveryRate + NonHospitalizedRecoveryRate + HospitalizationTime + InfectionTime, data = result_table)
+summary(PeakDayH.Anova)
 ```
